# GMAT-Python-simple

./: .gitignore  GMAT-Log.txt  GmatAPILog.txt  LICENSE  README.md  create_default_stop_condition.txt  example.py  example.script  gmat-api-simple.py  gmat_api_simple.py  load_default_script.py  load_gmat.py  load_gmat_OLD.py  pyproject.toml  setup.py  stop_cond_debugging_notes.txt
debugging/: Propagate_hanging.txt  StopCondition_errors.md
examples/: 001_Creating_a_Spacecraft.py  Moderator RunMission if runReady.txt  basic-propagate.py  basic-propagate.script  example.py  finite_burn.py  minimum_command_propagate.py  minimum_propagate_using_defaults.py  propagate_maneuver.py  use_with_matplotlib.py
examples/scripts/: Tut02-SimpleOrbitTransfer.script  example.script
examples/tutorials/: Tut01_SimulatingAnOrbit.py  Tut02_SimpleOrbitTransfer.py  Tut03_Target_FiniteBurn_To_Raise_Apogee.py  Tut04_Mars_B-Plane_Targeting.py  config.py
gmat_py_simple/: __init__.py  api_funcs.py  basics.py  burn.py  commands.py  executive.py  hardware.py  import_lib.py  interpreter.py  load_gmat.py  orbit.py  parameter.py  solver.py  spacecraft.py  utils.py
gmat_python_simple/: __init__.py  api_funcs.py  basics.py  executive.py  parameter.py
plugins/: API_setup.txt  README.md  README.txt
plugins/gmatpy/_py310/: _navigation_py.pyd  _station_py.pyd
plugins/gmatpy/_py311/: _navigation_py.pyd  _station_py.pyd  gmat_py.py  navigation_py.py
plugins/gmatpy/_py312/: __init__.py  _navigation_py.pyd  _station_py.pyd  station_py.py
plugins/gmatpy/_py313/: __init__.py  _station_py.pyd  station_py.py
plugins/gmatpy/_py314/: __init__.py  _station_py.pyd  gmat_py.py
tests/: command_functions.py  init.py  test.py  test_spacecraft.py
