[build-system]
requires = ["hatchling >= 1.26", "numpy >= 2.0.0"]
build-backend = "hatchling.build"

[project]
name = "gmat_py_simple"
version = "0.4.4"
authors = [
  { name="William Easdown Babb", email="weasdown99@gmail.com" },
]
description = "An extra wrapper for the GMAT Python API to simplify setting up mission simulations."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/weasdown/GMAT-Python-simple/"
Issues = "https://github.com/weasdown/GMAT-Python-simple/issues/"