[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gmat_py_simple"
version = "0.4.4"
authors = [
  { name="William Easdown Babb", email="weasdown99@gmail.com" },
]
description = "An extra wrapper for the GMAT Python API to simplify setting up mission simulations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy > 2.0.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",

    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Orbital Mechanics :: Astrodynamics",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/weasdown/GMAT-Python-simple/"
Issues = "https://github.com/weasdown/GMAT-Python-simple/issues/"